# dentist-ai-agent

./: .gitignore  README.md  main.py  presentation.pptx  pyproject.toml  rapport.docx  rapport.md
data/: dialogues.csv  mutuelles.json  slots.json
src/: agent.py  app.py  config.py  data_loader.py  dialogue_runner.py  prompt.py  voice.py
src/evaluation/: deterministic.py  llm_judge.py  metrics.py  prompt.py
src/tools/: __init__.py  book_appointment.py  cancel_appointment.py  check_mutuelle.py  search_slots.py  state.py  summary.py  transfer.py
